# dedup

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/scripts/: bench_compare.py
.github/workflows/: ci.yml
crates/dedup-cli/: Cargo.toml
crates/dedup-cli/src/: main.rs  output.rs  sarif.rs
crates/dedup-cli/tests/: config_cmd.rs  diff.rs  flags.rs  issue_summary.rs  list_show.rs  logging.rs  newer_schema.rs  output_format.rs  scan_snapshot.rs  suppressions.rs
crates/dedup-cli/tests/common/: mod.rs
crates/dedup-cli/tests/snapshots/: list_show__list_tier_a_basic.snap  list_show__show_tier_a_basic_group1.snap  scan_snapshot__scan_tier_a_basic.snap
crates/dedup-core/: Cargo.toml
crates/dedup-core/benches/: bucket_intersection.rs  full_scan.rs  tokenize_hash.rs
crates/dedup-core/src/: cache.rs  config.rs  editor.rs  ignore.rs  lib.rs  rolling_hash.rs  scanner.rs  tokenizer.rs
crates/dedup-core/tests/: cache.rs  ignore_layers.rs  normalization_modes.rs  scan.rs  suppressions.rs  tier_b_alpha_spans.rs  tier_b_promotion.rs  warm_cache.rs
crates/dedup-gui/: Cargo.toml
crates/dedup-gui/src/: app_state.rs  blame.rs  detail.rs  detail_rows.rs  empty_state.rs  highlight.rs  history_badge.rs  lib.rs  llm_prompt.rs  logging.rs  main.rs  menubar.rs  project_view.rs  recent.rs  sidebar_prefs.rs  suppressions_view.rs  tint.rs  toast.rs  tooltip.rs
crates/dedup-gui/src/detail_rows/: diff.rs
crates/dedup-gui/tests/: logging_smoke.rs  tier_badge.rs
crates/dedup-lang/: Cargo.toml
crates/dedup-lang/benches/: tree_sitter_parse_hash.rs
crates/dedup-lang/src/: lib.rs  normalize.rs  profile.rs  python.rs  rust.rs  typescript.rs
crates/dedup-lang/tests/: python_profile.rs  rust_profile.rs  typescript_profile.rs
crates/dedup-lang/tests/snapshots/: python_profile__python_profile_units.snap  rust_profile__rust_profile_units.snap  typescript_profile__typescript_profile_units.snap
docs/: README.md  cli.md  config.md  contributing-language-profile.md  dogfood-triage.md  editor.md  gui.md  ignore.md  install.md  performance.md  suppressions.md  troubleshooting.md
fixtures/python/: alpha.py  beta.py  decorated.py
fixtures/rust/: alpha.rs  beta.rs
fixtures/tier_a_basic/: alpha.rs  beta.rs  gamma.rs
fixtures/typescript/: alpha.ts  beta.ts  component.tsx
