[package]
name = "dedup-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line frontend for dedup."

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
dedup-core = { path = "../dedup-core" }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
tempfile = "3"
