[package]
name = "dedup-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line frontend for dedup."

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dedup-core = { path = "../dedup-core" }
human-panic = "2"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
jsonschema = { version = "0.46", default-features = false, features = ["resolve-file"] }
tempfile = "3"
predicates = "3"
