[package]
name = "dedup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core detection, normalization, and persistence primitives for dedup."

[dependencies]
rustc-hash = "2"
thiserror = "2"
walkdir = "2"

[dev-dependencies]
insta = "1"
proptest = "1"
tempfile = "3"
