[package]
name = "dedup-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core detection, normalization, and persistence primitives for dedup."

[dependencies]
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
tracing = "0.1"
walkdir = "2"

[dev-dependencies]
insta = "1"
proptest = "1"
tempfile = "3"
