[package]
name = "dedup-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GPUI-based macOS frontend for dedup."

[dependencies]

[target.'cfg(target_os = "macos")'.dependencies]
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
filetime = "0.2"
tempfile = "3"
