[package]
name = "dedup-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GPUI-based macOS frontend for dedup."

[[bin]]
name = "dedup-gui"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]

# ---------------------------------------------------------------------------
# GPUI pin (HITL decision — see PRD issue #1 "Process model" and issue #19)
# ---------------------------------------------------------------------------
# Chosen revision: da25b914c25f17ba457abc8cf75b8e42d0b899e2
# Tag: v0.232.3
# Date picked: 2026-04-21 (tag cut 2026-04-16)
# Rationale:
#   * Most recent stable (non -pre) Zed release tag at the time of this pin.
#   * Cut from a release branch, not a random `main` HEAD, so it is
#     battle-tested as the basis of a shipped Zed build.
#   * Tagged commit metadata: "Bump to 0.232.3 for @eholk"
#     (see https://github.com/zed-industries/zed/releases/tag/v0.232.3).
#
# Upgrade cadence: **quarterly-ish, deliberate** (per PRD §"Process model" /
# "Further Notes"). Do NOT bump this to track Zed `main`. When bumping:
#   1. Pick a new release tag (prefer `vX.Y.Z` stable, not `-pre`).
#   2. Update the comment block above (SHA + tag + date + rationale).
#   3. Run `cargo update -p gpui` and rebuild / retest on macOS.
#   4. Commit the Cargo.lock delta alongside this Cargo.toml change.
#
# HITL override: the human reviewer can substitute a different revision in a
# follow-up PR. Any Zed revision that (a) builds on the macOS CI image and
# (b) opens a window on launch satisfies issue #19's MVP acceptance bar.
#
# Note on tree size: GPUI transitively pulls in a very large slice of Zed's
# workspace (metal, core-graphics, tree-sitter, ~hundreds of crates). This
# is expected and documented in the PR body — perf tuning isn't blocking.
# ---------------------------------------------------------------------------
[target.'cfg(target_os = "macos")'.dependencies]
dedup-core = { path = "../dedup-core" }
gpui = { git = "https://github.com/zed-industries/zed.git", rev = "da25b914c25f17ba457abc8cf75b8e42d0b899e2" }
gpui_platform = { git = "https://github.com/zed-industries/zed.git", rev = "da25b914c25f17ba457abc8cf75b8e42d0b899e2", features = ["font-kit"] }
# Issue #30 — main-thread panic postmortems. Same version pin as the
# CLI (`dedup-cli/Cargo.toml`) so both binaries emit the same metadata
# block pointing at `~/.config/dedup/logs/`.
human-panic = "2"
log = "0.4"
# `rfd` is the standard Rust file-dialog crate; on macOS it wraps
# `NSOpenPanel`. Default features pull in xdg-portal / wayland for Linux,
# which we don't need here — the whole GUI crate is macOS-gated.
rfd = { version = "0.15", default-features = false }
# ---------------------------------------------------------------------------
# Syntax highlighting deps (issue #24)
# ---------------------------------------------------------------------------
# `tree-sitter-highlight` is pinned to the 0.23 line to stay compatible
# with the `tree-sitter = "0.23"` workspace grammars (`tree-sitter-rust`,
# `-typescript`, `-python`). The per-language `HIGHLIGHTS_QUERY` constants
# re-exported by those crates are concatenated into `HighlightConfiguration`
# instances in `highlight.rs`.
tree-sitter = "0.23"
tree-sitter-highlight = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
# `syntect` is the fallback engine for anything not handled by a
# tree-sitter profile. We disable default features (`default-onig`) to
# avoid the C-based `onig` regex dep and pick `default-fancy`, which
# uses `fancy-regex` (pure Rust) while still bundling the default
# Sublime-syntax set + default themes so no runtime data files are
# needed. See highlight.rs for the scope-name → `Highlight` mapping.
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
# Issue #28 — Open Recent menu. `recent.json` is serialized via serde;
# both crates already live deep in the dependency graph so we're not
# paying a new compile cost by adding them here.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dev-dependencies]
filetime = "0.2"
tempfile = "3"
