[package]
name = "dedup-lang"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Language profiles (generic Tier A + Rust / TypeScript / Python Tier B) for dedup."

[dependencies]
tracing = "0.1"
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"

[dev-dependencies]
criterion = "0.5"
insta = "1"
proptest = "1"

[[bench]]
name = "tree_sitter_parse_hash"
harness = false
